change mobile button size

--- a/newindex.html
+++ b/newindex.html
@@ -32,13 +32,35 @@
 
     <div class="main-content">
       <div class="row">
-        <div class="section-heading"><h1>About 1</h1></div>
-        <div class="row">
-          <div class="section-body">Hello 1</div>
+        <div class="left-side">
+          <div class="column-header">What and Who we are</div>
+          <div class="column-text text-justify">
+            ChildWatch is an action group of concerned parents, initially
+            fathers. Our aim is to effect change in the laws and society's views
+            on the rights of single and divorced fathers, to actively share in
+            the day-to-day rearing of their children and, to even be the primary
+            cargiver.
+          </div>
         </div>
 
-        <div class="section-heading"><h1>About 1</h1></div>
-        <!-- <div class="section-body">Hello 1</div> -->
+        <div class="right-side col-center">
+          <!-- <img width="300" src="img/pexels-artem-podrez-6941841.svg" alt="" /> -->
+        </div>
+      </div>
+
+      <div class="row">
+        <div style="object-fit: cover" class="right-side col-center">
+          <!-- <img width="300" src="img/pexels-artem-podrez-6941841.svg" alt="" /> -->
+        </div>
+        <div class="left-side">
+          <div class="column-header">Why we formed</div>
+          <div class="column-text text-justify">
+            To address issues pertaining to the unjust treatment of responsible
+            and caring Fathers in relationship to theor parental rights over the
+            welfare and upbringing of their children and, to bring focus and
+            improvement on the enforcement of the custody laws.
+          </div>
+        </div>
       </div>
     </div>
 
