--- a/newindex.html
+++ b/newindex.html
@@ -11,13 +11,10 @@
     <div class="fixed-header">
       <div class="fixed-header-wrapper">
         <div class="title-and-image">
-          <div>
-            <img class="map" src="img/bermudamap.svg" alt="" />
-          </div>
-          <div class="child-pic">
-            <img src="img/hero-image.svg" alt="" />
-          </div>
+          <div><img src="img/logo.svg" alt="" /></div>
+          <div class="logo-text">ChildWatch Bermuda</div>
         </div>
+
         <div class="menu-items-container">
           <ul id="menu_items" class="menu-items">
             <li class="item active">Home</li>
@@ -31,10 +28,12 @@
     </div>
 
     <div class="main-content">
+      <span class="heading">About Us</span>
       <div class="row">
-        <div class="left-side">
-          <div class="column-header">What and Who we are</div>
-          <div class="column-text text-justify">
+        <div class="info">
+          <div class="sub-heading">Who we are</div>
+          <hr class="short-underline" />
+          <div class="text-area">
             ChildWatch is an action group of concerned parents, initially
             fathers. Our aim is to effect change in the laws and society's views
             on the rights of single and divorced fathers, to actively share in
@@ -42,23 +41,27 @@
             cargiver.
           </div>
         </div>
-
-        <div class="right-side col-center">
-          <!-- <img width="300" src="img/pexels-artem-podrez-6941841.svg" alt="" /> -->
-        </div>
-      </div>
-
-      <div class="row">
-        <div style="object-fit: cover" class="right-side col-center">
-          <!-- <img width="300" src="img/pexels-artem-podrez-6941841.svg" alt="" /> -->
-        </div>
-        <div class="left-side">
-          <div class="column-header">Why we formed</div>
-          <div class="column-text text-justify">
+        <div class="info">
+          <div class="sub-heading">Why we formed</div>
+          <hr class="short-underline" />
+          <div class="text-area">
             To address issues pertaining to the unjust treatment of responsible
             and caring Fathers in relationship to theor parental rights over the
             welfare and upbringing of their children and, to bring focus and
             improvement on the enforcement of the custody laws.
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="info">
+          <div class="sub-heading">Mission Statement</div>
+          <hr class="short-underline" />
+          <div class="text-area">
+            ChildWatch is an action group of concerned parents, initially
+            fathers. Our aim is to effect change in the laws and society's views
+            on the rights of single and divorced fathers, to actively share in
+            the day-to-day rearing of their children and, to even be the primary
+            cargiver.
           </div>
         </div>
       </div>
