change mobile button size

--- a/newindex.html
+++ b/newindex.html
@@ -10,7 +10,7 @@
   <body>
     <div class="fixed-header">
       <div class="fixed-header-wrapper">
-        <div class="title-and-image">
+        <div class="logo">
           <div><img src="img/logo.svg" alt="" /></div>
           <div class="logo-text">ChildWatch Bermuda</div>
         </div>
