change mobile button size

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <div class="menu-items-container">
           <ul id="menu_items" class="menu-items">
-            <li class="item active">Home</li>
-            <li>Objectives</li>
-            <li>Research</li>
-            <li>Contact us</li>
+            <li class="item active"><a href="">Home</a></li>
+            <li class="item"><a href="objectives.html">Objectives</a></li>
+            <li class="item"><a href="">Research</a></li>
+            <li class="item"><a href=""> Contact us</a></li>
           </ul>
         </div>
         <div class="hamburger-menu"><img src="img/hamburger.svg" alt="" /></div>
@@ -65,9 +65,9 @@
           </div>
         </div>
         <div class="info flex-justify-center">
-          <div class="button">
+          <a href="objectives.html" class="button">
             Our Objectives <img width="25" src="img/right-arrow.svg" alt="" />
-          </div>
+          </a>
         </div>
       </div>
     </div>
