--- a/objectives.html
+++ b/objectives.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Childwatch | Home</title>
-    <link rel="stylesheet" href="css/newstyles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="fixed-header">
@@ -17,10 +17,10 @@
 
         <div class="menu-items-container">
           <ul id="menu_items" class="menu-items">
-            <li class="item active">Home</li>
-            <li>Objectives</li>
-            <li>Research</li>
-            <li>Contact us</li>
+            <li class="item"><a href="index.html">Home</a></li>
+            <li class="item active"><a href="">Objectives</a></li>
+            <li class="item"><a href="">Research</a></li>
+            <li class="item"><a href=""> Contact us</a></li>
           </ul>
         </div>
         <div class="hamburger-menu"><img src="img/hamburger.svg" alt="" /></div>
