change mobile button size

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <div class="menu-items-container">
           <ul id="menu_items" class="menu-items">
-            <li class="item active"><a href="">Home</a></li>
-            <li class="item"><a href="objectives.html">Objectives</a></li>
-            <li class="item"><a href="">Research</a></li>
-            <li class="item"><a href=""> Contact us</a></li>
+            <li class="item active">Home</li>
+            <a href="./objectives"><li class="item">Objectives</li></a>
+            <a href="./research"><li class="item">Research</li></a>
+            <a href="./contact"><li class="item">Contact us</li></a>
           </ul>
         </div>
         <div class="hamburger-menu"><img src="img/hamburger.svg" alt="" /></div>
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="info flex-justify-center">
-          <a href="objectives.html" class="button">
+          <a href="./objectives" class="button">
             Our Objectives <img width="25" src="img/right-arrow.svg" alt="" />
           </a>
         </div>
