--- a/objectives/index.html
+++ b/objectives/index.html
@@ -30,7 +30,54 @@
       </div>
     </div>
 
-    <div class="main-content"></div>
+    <div class="main-content">
+      <div class="heading">Our Objectives</div>
+      <hr class="short-underline" />
+
+      <div class="objectives-list">
+        <div class="objective-line">
+          <img src="./img/checkmark.svg" alt="" />
+          <div>
+            Keep the well being of the child the focus of parenting for both
+            parties.
+          </div>
+        </div>
+        <div class="objective-line">
+          <img src="./img/checkmark.svg" alt="" />
+          Champion the child’s rights to enjoy equal access to both biological
+          parents.
+        </div>
+        <div class="objective-line">
+          <img src="./img/checkmark.svg" alt="" />
+          To satisfy in the eyes of the law, that either mother or father can be
+          equally effectve as primary caregivers.
+        </div>
+        <div class="objective-line">
+          <img src="./img/checkmark.svg" alt="" />
+          Promote fair an unbiased judgements in child custody cases.
+        </div>
+        <div class="objective-line">
+          <img src="./img/checkmark.svg" alt="" />
+          Ensure that fathers are given equal opportunity to provide a positive
+          male role in their child’s day-to-day life.
+        </div>
+        <div class="objective-line">
+          <img src="./img/checkmark.svg" alt="" />
+          Educate society on the vital role and significance of the father in
+          the child’s life.
+        </div>
+        <div class="objective-line">
+          <img src="./img/checkmark.svg" alt="" />
+          Mentor and lend support to disenfranchised fathers who are trying to a
+          positive role in their child’s life.
+        </div>
+        <div class="objective-line">
+          <img src="./img/checkmark.svg" alt="" />
+          Provide mediation for couples and in particular fathers, so that
+          children are as unaffected as possible during a separation or divorce.
+        </div>
+      </div>
+    </div>
 
     <script defer src="../main.js"></script>
   </body>
