--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="fixed-header">
       <div class="fixed-header-wrapper">
         <div class="logo">
-          <div><img src="img/logo.svg" alt="" /></div>
+          <div><img class="logo-img" src="img/logo.svg" alt="" /></div>
           <div class="logo-text">ChildWatch Bermuda</div>
         </div>
 
