change mobile button size

--- a/objectives/index.html
+++ b/objectives/index.html
@@ -78,20 +78,7 @@
             divorce.
           </div>
         </div>
-        <div
-          class="img-wrapper"
-          style="
-            display: flex;
-            position: absolute;
-            width: 30vw;
-            height: 90vh;
-            right: 0;
-            background-color: red;
-            background: url('img/girl-thin.svg');
-            background-repeat: no-repeat;
-            margin-top: -16px;
-          "
-        ></div>
+        <div class="img-wrapper"></div>
       </div>
     </div>
 
