change mobile button size

--- a/objectives/index.html
+++ b/objectives/index.html
@@ -78,7 +78,9 @@
             divorce.
           </div>
         </div>
-        <div class="img-wrapper"></div>
+        <div class="img-wrapper">
+          <img src="./img/girl-thin.svg" alt="" />
+        </div>
       </div>
     </div>
 
