change mobile button size

--- a/objectives/index.html
+++ b/objectives/index.html
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="img-wrapper">
-          <img src="./img/girl-thin.svg" alt="" />
+          <!-- <img src="./img/girl-thin.svg" alt="" /> -->
         </div>
       </div>
     </div>
