--- a/objectives/index.html
+++ b/objectives/index.html
@@ -1,13 +1,81 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Childwatch | Home</title>
+    <title>Document</title>
+
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="./styles.css" />
   </head>
+  <style>
+    :root {
+      --checkmark: "'./objectives/img/checkmark.svg'";
+    }
+
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+    .wrapper {
+      display: flex;
+      height: 100vh;
+      width: 100vw;
+      justify-content: space-between;
+    }
+    .objectives-content {
+      display: flex;
+      padding-left: 3rem;
+      padding-top: 3rem;
+      justify-content: start;
+      flex-direction: column;
+      /* line-height: 1.8; */
+
+      width: 100%;
+      margin-bottom: 10px;
+      font-size: 1.5rem;
+      font-weight: normal;
+    }
+
+    .row {
+      display: flex;
+      margin-bottom: 2rem;
+      /* line-height: 1.8; */
+      /* align-self: flex-start; */
+    }
+
+    .row img {
+      padding-right: 1rem;
+    }
+
+    .image-content {
+      display: flex;
+      height: 100%;
+      /* align-self: end; */
+      /* justify-self: flex-end; */
+    }
+    .image-content img {
+      width: 100%;
+      display: inline-block;
+      object-fit: cover;
+    }
+
+    .short-underline {
+      width: 50px;
+      height: 4px;
+      border: none;
+      background-color: #da1e78;
+      margin-bottom: 30px;
+    }
+
+    .heading {
+      display: flex;
+      font-size: 36px;
+      color: black;
+      font-weight: 700;
+      list-style: 1;
+    }
+  </style>
   <body>
     <div class="fixed-header">
       <div class="fixed-header-wrapper">
@@ -30,60 +98,58 @@
       </div>
     </div>
 
-    <div class="main-content">
-      <div class="wrapper">
-        <div class="objectives-list">
-          <div class="heading">Our Objectives</div>
-          <hr class="short-underline" />
-          <div class="objective-line">
-            <img src="./img/checkmark.svg" alt="" />
-            <div>
-              Keep the well being of the child the focus of parenting for both
-              parties.
-            </div>
-          </div>
-          <div class="objective-line">
-            <img src="./img/checkmark.svg" alt="" />
-            Champion the child’s rights to enjoy equal access to both biological
-            parents.
-          </div>
-          <div class="objective-line">
-            <img src="./img/checkmark.svg" alt="" />
-            To satisfy in the eyes of the law, that either mother or father can
-            be equally effectve as primary caregivers.
-          </div>
-          <div class="objective-line">
-            <img src="./img/checkmark.svg" alt="" />
-            Promote fair an unbiased judgements in child custody cases.
-          </div>
-          <div class="objective-line">
-            <img src="./img/checkmark.svg" alt="" />
-            Ensure that fathers are given equal opportunity to provide a
-            positive male role in their child’s day-to-day life.
-          </div>
-          <div class="objective-line">
-            <img src="./img/checkmark.svg" alt="" />
-            Educate society on the vital role and significance of the father in
-            the child’s life.
-          </div>
-          <div class="objective-line">
-            <img src="./img/checkmark.svg" alt="" />
-            Mentor and lend support to disenfranchised fathers who are trying to
-            a positive role in their child’s life.
-          </div>
-          <div class="objective-line">
-            <img src="./img/checkmark.svg" alt="" />
-            Provide mediation for couples and in particular fathers, so that
-            children are as unaffected as possible during a separation or
-            divorce.
-          </div>
+    <div class="wrapper">
+      <div class="objectives-content">
+        <div class="heading">Our Objectives</div>
+        <hr class="short-underline" />
+
+        <div class="row">
+          <img src="./objectives/img/checkmark.svg" />
+          Keep the well being of the child the focus of parenting for both
+          parties
         </div>
-        <div class="img-wrapper">
-          <!-- <img src="./img/girl-thin.svg" alt="" /> -->
+
+        <div class="row">
+          <img src="./objectives/img/checkmark.svg" />
+          Champion the child’s rights to enjoy equal access to both biological
+          parents.
+        </div>
+        <div class="row">
+          <img src="./objectives/img/checkmark.svg" /> Promote fair an unbiased
+          judgements in child custody cases.
+        </div>
+
+        <div class="row">
+          <img src="./objectives/img/checkmark.svg" /> Ensure that fathers are
+          given equal opportunity to provide a positive male role in their
+          child’s day-to-day life.
+        </div>
+
+        <div class="row">
+          <img src="./objectives/img/checkmark.svg" /> Educate society on the
+          vital role and significance of the father in the child’s life.
+        </div>
+
+        <div class="row">
+          <img src="./objectives/img/checkmark.svg" /> Mentor and lend support
+          to disenfranchised fathers who are trying to a positive role in their
+          child’s life.
+        </div>
+
+        <div class="row">
+          <img src="./objectives/img/checkmark.svg" /> Provide mediation for
+          couples and in particular fathers, so that children are as unaffected
+          as possible during a separation or divorce.
+        </div>
+
+        <div class="row">
+          <img src="./objectives/img/checkmark.svg" /> Keep the well being of
+          the child the focus of parenting for both parties
         </div>
       </div>
+      <div class="image-content">
+        <img src="./objectives/img/girl-thin.svg" alt="" />
+      </div>
     </div>
-
-    <script defer src="../main.js"></script>
   </body>
 </html>
