--- a/objectives/index.html
+++ b/objectives/index.html
@@ -9,7 +9,7 @@
   </head>
   <style>
     :root {
-      --checkmark: "'./objectives/img/checkmark.svg'";
+      --checkmark: "'./img/checkmark.svg'";
     }
 
     * {
@@ -104,51 +104,51 @@
         <hr class="short-underline" />
 
         <div class="row">
-          <img src="./objectives/img/checkmark.svg" />
+          <img src="./img/checkmark.svg" />
           Keep the well being of the child the focus of parenting for both
           parties
         </div>
 
         <div class="row">
-          <img src="./objectives/img/checkmark.svg" />
+          <img src="./img/checkmark.svg" />
           Champion the child’s rights to enjoy equal access to both biological
           parents.
         </div>
         <div class="row">
-          <img src="./objectives/img/checkmark.svg" /> Promote fair an unbiased
-          judgements in child custody cases.
+          <img src="./img/checkmark.svg" /> Promote fair an unbiased judgements
+          in child custody cases.
         </div>
 
         <div class="row">
-          <img src="./objectives/img/checkmark.svg" /> Ensure that fathers are
-          given equal opportunity to provide a positive male role in their
-          child’s day-to-day life.
+          <img src="./img/checkmark.svg" /> Ensure that fathers are given equal
+          opportunity to provide a positive male role in their child’s
+          day-to-day life.
         </div>
 
         <div class="row">
-          <img src="./objectives/img/checkmark.svg" /> Educate society on the
-          vital role and significance of the father in the child’s life.
+          <img src="./img/checkmark.svg" /> Educate society on the vital role
+          and significance of the father in the child’s life.
         </div>
 
         <div class="row">
-          <img src="./objectives/img/checkmark.svg" /> Mentor and lend support
-          to disenfranchised fathers who are trying to a positive role in their
+          <img src="./img/checkmark.svg" /> Mentor and lend support to
+          disenfranchised fathers who are trying to a positive role in their
           child’s life.
         </div>
 
         <div class="row">
-          <img src="./objectives/img/checkmark.svg" /> Provide mediation for
-          couples and in particular fathers, so that children are as unaffected
-          as possible during a separation or divorce.
+          <img src="./img/checkmark.svg" /> Provide mediation for couples and in
+          particular fathers, so that children are as unaffected as possible
+          during a separation or divorce.
         </div>
 
         <div class="row">
-          <img src="./objectives/img/checkmark.svg" /> Keep the well being of
-          the child the focus of parenting for both parties
+          <img src="./img/checkmark.svg" /> Keep the well being of the child the
+          focus of parenting for both parties
         </div>
       </div>
       <div class="image-content">
-        <img src="./objectives/img/girl-thin.svg" alt="" />
+        <img src="./img/girl-thin.svg" alt="" />
       </div>
     </div>
   </body>
