change mobile button size

--- a/objectives/index.html
+++ b/objectives/index.html
@@ -44,6 +44,7 @@
       margin-bottom: 10px;
       font-size: 1.5rem;
       font-weight: normal;
+      padding-right: 3rem;
     }
 
     .row {
@@ -75,14 +76,6 @@
       background-color: #da1e78;
       margin-bottom: 30px;
     }
-
-    /* .heading {
-      display: flex;
-      font-size: 36px;
-      color: black;
-      font-weight: 700;
-      list-style: 1;
-    } */
   </style>
   <body>
     <div class="fixed-header">
