change mobile button size

--- a/objectives/index.html
+++ b/objectives/index.html
@@ -65,7 +65,7 @@
     }
     .image-content img {
       width: 100%;
-      display: inline-block;
+      /* display: inline-block; */
       object-fit: cover;
     }
 
