change mobile button size

--- a/objectives/index.html
+++ b/objectives/index.html
@@ -29,8 +29,7 @@
 
     .wrapper {
       display: flex;
-      /* height: calc(100vh - var(--nav-height)); */
-      /* margin-top: 126px; */
+      height: 100vh;
       justify-content: space-between;
       padding-top: var(--nav-height);
     }
